# aurora

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini
adapters/: README.md  __init__.py  __main__.py  doctor.py  filings.py  jobs.py  news.py  openalex.py  package_util.py  patentsview.py  uspto.py
backend/: Dockerfile  alembic.ini  api.py  requirements-engine-test.txt  requirements.txt
benchmarks/: bench.py
docs/: GOOD_FIRST_ISSUES.md  RELEASE.md  RELEASE_CADENCE.md  architecture.md  autonomous-loop-log.md  ci-github-actions.yml  clustering-model.md  evolution-loop.md  hype-filter.md  import-schema.md  leakage-prevention.md  real-dump-guide.md  requirements-matrix.md  scoring-model.md  self-audit.md
examples/: real_mini_package.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build_multisource_case.py  check_all.py  check_case_scorecard.py  check_engine.py  lint_package.py  resolve_entities.py  run_backtest.py  run_retro_case.py  validate_package.py
tests/: conftest.py  test_adapters_documents_auto.py  test_adapters_external_ids_field.py  test_adapters_filings.py  test_adapters_jobs_news_merge.py  test_adapters_openalex.py  test_adapters_patentsview.py  test_adapters_uspto.py  test_api.py  test_char_span_align.py  test_clustering.py  test_data_quality_reliability.py  test_entity_external_ids.py  test_entity_resolution.py  test_errors_isolation.py  test_example_package.py  test_external_id_resolution.py  test_hype_counterevidence_bottleneck.py  test_import_auto_independence.py  test_import_dedup.py  test_leakage_backtest.py  test_lint_documents.py  (+14 more)
(+75 files in other folders)
